added meta tags and favicon.ico

--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <meta name="robots" content="index, follow" />
+        <title>Dmitriy Karaush</title>
+        <link rel="shortcut icon" href="./images/favicon.ico">
+        <link rel="icon" type="image/png" href="./images/me.png" />
         <meta name="description" content="Dmitriy Karaush CV" />
-        <title>dima karaush</title>
         <link rel="canonical" href="https://dkaraush.me/" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./main.css">
+
+        <meta property="og:title" content="Dmitriy Karaush">
+        <meta property="og:image" content="./images/favicon.ico">
+        <meta property="og:url" content="https://dkaraush.me/">
+
+        <meta name="twitter:title" content="Dmitriy Karaush">
+        <meta name="twitter:image" content="./images/favicon.ico">
+        <meta name="twitter:card" content="summary">
     </head>
     <body>
-        <!--  target="_blank" rel="noopener nofollow" -->
         <div id="root">
             <div id="header">
                 <img src="./images/me.jpg" alt="Yes. That's me." />
                 <div id="header-info">
-                    <h3>Dima Karaush</h3>
-                    <p></p>
+                    <h3>Dmitriy Karaush</h3>
+                    <!-- <p></p> -->
                 </div>
             </div>
             <div class="intro">
@@ -156,7 +166,7 @@
                         </div>
                         <a href="https://studsearch.org/"><b>StudSearch.org</b></a> <i>(in Ukrainian)</i><span class="grey">2020</span><br />
                         <p>Volunteer students share their experience about universities to applicants. I made a frontend and backend of the website, that contain listing database and registering.</p>
-                        <p>Waiting for poll results from students and applicants to make conclusion of the work this year.</p>
+                        <p><i>Waiting for poll results from students and applicants to make conclusion of the work this year...</i></p>
                     </li>
                     <li>
                         <div class="tags">
