updated image meta tags src

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <link rel="stylesheet" href="./main.css">
 
         <meta property="og:title" content="Dmitriy Karaush">
-        <meta property="og:image" content="./images/favicon.ico">
+        <meta property="og:image" content="https://dkaraush.me/images/me.png">
         <meta property="og:url" content="https://dkaraush.me/">
 
         <meta name="twitter:title" content="Dmitriy Karaush">
-        <meta name="twitter:image" content="./images/favicon.ico">
+        <meta name="twitter:image" content="https://dkaraush.me/images/me.png">
         <meta name="twitter:card" content="summary">
     </head>
     <body>
