--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </head>
     <body>
         <div id="root">
+            <span class="link-here">Also available at <a href="https://dkaraush.me/">dkaraush.me</a></span>
             <div id="header">
                 <img src="./images/me.jpg" alt="Yes. That's me." />
                 <div id="header-info">
@@ -46,7 +47,6 @@
                     </ul>
                 </div>
             </div>
-            <br />
             <h3>Projects & achievements</h3>
             <div class="box">
                 <div class="header">
