added english paragraph

--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
                     <p>I'm waiting when conclusion page with poll results will be made.</p>
                 </div>
             </div> -->
+            <p><b>English:</b> passed FCE B2 exam (Upper-Intermediate) with 169 in average.</p>
             <p><b>P.S.: Age:</b> 17 y.o. (born in 2003)</p>
             <div class="ps">
                 <span class="separator"></span>
@@ -211,7 +212,7 @@
                             <span>Java</span>
                             <span>ffmpeg</span>
                         </div>
-                        <b>SH++ Videobackbone</b><span class="grey">2015</span>
+                        <b>Ш++ Videobackbone</b><span class="grey">2015</span>
                         <p>Java application, which is run in <a target="_blank" rel="noopener nofollow" href="https://programming.kr.ua/">the programming school</a>, waits for an SD-card, searches for new videos of lectures, compresses, puts overlays in ffmpeg and sends them into students portal.</p>
                         <p>Right now is replaced with another solution, but was quite often used in its time.</p>
                         <p>Portal still works <a target="_blank" rel="noopener nofollow" href="http://video.programming.kr.ua/">here</a>, but, obviously, it's open for students only, so nothing to show :(</p>
