--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <p>I'm waiting when conclusion page with poll results will be made.</p>
                 </div>
             </div> -->
-            <p><b>English:</b> passed FCE B2 exam (Upper-Intermediate) with 169 in average.</p>
+            <p><b>English:</b> passed FCE B2 exam (Upper-Intermediate) with 169 on the average.</p>
             <p><b>P.S.: Age:</b> 17 y.o. (born in 2003)</p>
             <div class="ps">
                 <span class="separator"></span>
