changed links back to dkaraush.me/

--- a/demos/index.html
+++ b/demos/index.html
@@ -17,7 +17,7 @@
 	</header>
 	<main>
 		<h4>2019</h4>
-		<a href='http://dkaraush.shpp.me/demos/telegram-contest-stage2/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/telegram-contest-stage2/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Telegram Contest App (Stage 2)</h5>
 				<p>Web app for t.me/contest</p>
@@ -25,7 +25,7 @@
 			<img src="telegram-contest-stage2/preview.jpg" />
 			<div class='grey'></div>
 		</a>
-		<a href='http://dkaraush.shpp.me/demos/telegram-contest/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/telegram-contest/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Telegram Contest App (Stage 1)</h5>
 				<p>Web app for t.me/contest. Won the third place.</p>
@@ -34,7 +34,7 @@
 			<div class='grey'></div>
 		</a>
 
-		<a href='http://dkaraush.shpp.me/demos/3d/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/3d/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>3D Model viewer</h5>
 				<p>Rendering 3D model without using Z-buffer and any 3D engines.</p>
@@ -46,7 +46,7 @@
 			</video>
 			<div class='grey'></div>
 		</a>
-		<a href='http://dkaraush.shpp.me/demos/cubeseditor/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/cubeseditor/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Cubes' Height Editor</h5>
 				<p>Isometric cubes with in-browser code editor, which can control every cube's height.</p>
@@ -58,7 +58,7 @@
 			</video>
 			<div class='grey'></div>
 		</a>
-		<a href='http://dkaraush.shpp.me/demos/circles/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/circles/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Circle patterns</h5>
 				<p>Circles with different speeds form new patterns.</p>
@@ -71,7 +71,7 @@
 			<div class='grey'></div>
 		</a>
 		<h4>2018</h4>
-		<a href='http://dkaraush.shpp.me/demos/squares/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/squares/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Rotating squares</h5>
 				<p>Very tiny animation. I want to expand it later.</p>
@@ -83,7 +83,7 @@
 			</video>
 			<div class='grey'></div>
 		</a>
-		<a href='http://dkaraush.shpp.me/demos/tree-pythagoras/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/tree-pythagoras/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Simple Pythagoras Tree</h5>
 				<p>Nothing special. Just pythagoras tree.</p>
@@ -95,7 +95,7 @@
 			</video>
 			<div class='grey'></div>
 		</a>
-		<a href='http://dkaraush.shpp.me/demos/sierpienski-rect/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/sierpienski-rect/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Sierpienski rectangle</h5>
 				<p>Endless sierpienski rectangle.</p>
@@ -107,7 +107,7 @@
 			</video>
 			<div class='grey'></div>
 		</a>
-		<a href='http://dkaraush.shpp.me/demos/cc/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/cc/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Tactics Simulation</h5>
 				<p>Experimental simulation, where creatures have different tactics and abilities.</p>
@@ -119,7 +119,7 @@
 			</video>
 			<div class='grey'></div>
 		</a>
-		<a href='http://dkaraush.shpp.me/demos/talos/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/talos/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>The Talos Principle Terminal</h5>
 				<p>All documents and capsules. Russian only.</p>
@@ -131,7 +131,7 @@
 			</video>
 			<div class='grey'></div>
 		</a>
-		<a href='http://dkaraush.shpp.me/demos/endless/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/endless/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Polygons in circles</h5>
 				<p>Endless animation of regular polygons in circles.</p>
@@ -143,7 +143,7 @@
 			</video>
 			<div class='grey'></div>
 		</a>
-		<a href='http://dkaraush.shpp.me/demos/doomlike/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/doomlike/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Pseudo-3D rendering</h5>
 				<p>Pseudo-3D rendering, like in Wolfenstein 3D. WASD controls.</p>
@@ -155,7 +155,7 @@
 			</video>
 			<div class='grey'></div>
 		</a>
-		<a href='http://dkaraush.shpp.me/demos/color-correction/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/color-correction/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Coding image with each pixel</h5>
 				<p>In-browser code editor gives an ability to change each pixel's color.</p>
@@ -167,7 +167,7 @@
 			</video>
 			<div class='grey'></div>
 		</a>
-		<a href='http://dkaraush.shpp.me/demos/polygonizer/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/polygonizer/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>Polygonizer</h5>
 				<p>In-browser app, which makes photo "polygonized".</p>
@@ -180,7 +180,7 @@
 			<div class='grey'></div>
 		</a>
 		<h4>2017</h4>
-		<a href='http://dkaraush.shpp.me/demos/tree/' target='blank' class='demo'>
+		<a href='https://dkaraush.me/demos/tree/' target='blank' class='demo'>
 			<div class='text'>
 				<h5>3D ASCII Christmas Tree</h5>
 				<p>3D christmas tree in ASCII. Made with THREE.js</p>
