--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         </div>
                         <b>Demos</b><span class="grey">2017 - 2020</span><br />
                         <!--a target="_blank" rel="noopener nofollow" href="./demos/"></a>>Watch them!</a-->
-                        <a target="_blank" rel="noopener nofollow" href="https://dkaraush.shpp.me/demos/">Watch them!</a>
+                        <a target="_blank" rel="noopener nofollow" href="https://dkaraush.me/demos/">Watch them!</a>
                         <p>Left alone with a computer on Computer Science lessons in a regular school, I played a lot with &lt;canvas&gt; rendering, as it was available in each computer with browser. I really enjoyed drawing them using geometry and trigonometry!</p>
                         <!-- <p>Right now I still make demos sometimes. While reading <a target="_blank" rel="noopener nofollow" href="https://thebookofshaders.com/">the book</a>, I </p> -->
                     </li>
