removed crying about injustice

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <p>On my traineeship in Onix-Systems (Kirovohrad, Ukraine), I made few applications for Amazon Alexa voice assistant.</p>
                         <p>The problem with these Amazon Alexa devices — is that it's not possible to play music or any other audio recordings without paying more, due to copyright. So, I made possible to play personal audio recordings from Dropdox account, by connecting them with OAuth.</p>
                         <p>This application still works: <a target="_blank" rel="noopener nofollow" href="https://www.amazon.com/dp/B07FL7SDPZ">Amazon Store</a>. <a target="_blank" rel="noopener nofollow" href="https://github.com/dkaraush/Dropbox-Player-for-Alexa">Source code</a>.</p>
-                        <p><i>(Please, don't believe these reviews, application didn't worked at that time due to Amazon just blocked it for 2 weeks, because of unreproducible bug they caught. I tried to contact those reviewers, but no success)</i></p>
+                        <!-- <p><i>(Please, don't believe these reviews, application didn't worked at that time due to Amazon just blocked it for 2 weeks, because of unreproducible bug they caught. I tried to contact those reviewers, but no success)</i></p> -->
                     </li>
                     <li class="half-opacity">
                         <div class="tags">
