--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                     <ul>
                         <li>Frontend (HTML/CSS/JS, React.JS, &lt;canvas&gt;, WebGL)</li>
                         <li>Backend (TypeScript, Node.JS, <a target="_blank" rel="noopener nofollow" href="https://socket.io/">socket.io</a>/<a target="_blank" rel="noopener nofollow" href="https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API">ws</a>)</li>
-                        <li>Telegram stack (<a target="_blank" rel="noopener nofollow" href="https://core.telegram.org/mtproto">MTProto</a>, <a target="_blank" rel="noopener nofollow" href="https://ton.org/">TON Blockchain</a>)</li>
                         <li>Unity3D (C#), shaders (GLSL/HLSL)</li>
+                        <li>Telegram stack (<a target="_blank" rel="noopener nofollow" href="https://core.telegram.org/mtproto">MTProto</a>, <a target="_blank" rel="noopener nofollow" href="https://ton.org/">TON Blockchain</a>)</li>
                     </ul>
                 </div>
             </div>
             <h3>Projects & achievements</h3>
-            <div class="box">
+            <!-- <div class="box">
                 <div class="header">
                     <img src="./images/bodjo.png">
                     <h3><a target="_blank" rel="noopener nofollow" href="https://bodjo.net/">bodjo.net</a> <span class="grey">2019</span></h3>
@@ -62,7 +62,7 @@
                     <p>Organized some hackathons<sup><a target="_blank" rel="noopener nofollow" href="https://pages.bodjo.net/news.2.en">[1]</a> <a target="_blank" rel="noopener nofollow" href="https://pages.bodjo.net/news.1.en">[2]</a> <a target="_blank" rel="noopener nofollow" href="https://pages.bodjo.net/news.0.en">[3]</a></sup> in my local town.</p>
                     <a target="_blank" rel="noopener nofollow" href="https://github.com/bodjo-net/">GitHub</a>
                 </div>
-            </div>
+            </div> -->
             <div class="box">
                 <div class="header">
                     <img src="./images/telegram.jpg" />
@@ -125,6 +125,19 @@
             </div>
             <div class="box">
                 <div class="header">
+                    <img src="./images/studsearch.jpg">
+                    <h3><a target="_blank" rel="noopener nofollow" href="https://studsearch.org/?lng=en-US">StudSearch.org</a> <span class="grey">2020-2021</span></h3>
+                    <div class="tags">
+                        <span>TypeScript</span><span>React</span><span>MySQL</span><span>Node.JS</span>
+                    </div>
+                </div>
+                <div class="content">
+                    <p>Volunteer students share their experience about universities to applicants.</p>
+                    <p>I was working primarily on technical part, full stack.</p>
+                </div>
+            </div>
+            <div class="box">
+                <div class="header">
                     <img src="./images/icybounce.jpg">
                     <h3><a target="_blank" rel="noopener nofollow" href="https://icybounce.com/info/">Icy Bounce</a> <span class="grey">2017-2018</span></h3>
                     <div class="tags">
@@ -138,18 +151,6 @@
                     <a target="_blank" rel="noopener nofollow" href="https://icybounce.com/info/">More info...</a>
                 </div>
             </div>
-            <!-- <div class="box">
-                <div class="header">
-                    <img src="./images/studsearch.jpg">
-                    <h3><a target="_blank" rel="noopener nofollow" href="https://studsearch.org">StudSearch.org</a> <span class="grey">2020</span></h3>
-                    <div class="tags">
-                        <span>TypeScript</span><span>React</span><span>MySQL</span><span>Node.JS</span>
-                    </div>
-                </div>
-                <div class="content">
-                    <p>I'm waiting when conclusion page with poll results will be made.</p>
-                </div>
-            </div> -->
             <p><b>English:</b> passed FCE B2 exam (Upper-Intermediate) with 169 on the average.</p>
             <p><b>P.S.: Age:</b> <span class="age">18</span> y.o. (born in 2003)</p>
             <div class="ps">
@@ -158,7 +159,7 @@
                 <p>The fact is — I still have some projects, that helped to gain more experience, but they aren't too serious, or are too old. So I don't want to put them right in the CV, but I still need some place for them. At least, to not forget.</p>
                 <br />
                 <ul>
-                    <li>
+                    <!-- <li>
                         <div class="tags">
                             <span>React</span>
                             <span>TypeScript</span>
@@ -168,6 +169,17 @@
                         <a href="https://studsearch.org/"><b>StudSearch.org</b></a> <i>(in Ukrainian)</i><span class="grey">2020</span><br />
                         <p>Volunteer students share their experience about universities to applicants. I made a frontend and backend of the website, that contain listing database and registering.</p>
                         <p><i>Waiting for poll results from students and applicants to make conclusion of the work this year...</i></p>
+                    </li> -->
+                    <li>
+                            <div class="tags">
+                                <span>Node.JS</span><span>React</span><span>socket.io/ws</span><span>WebRTC</span><a target="_blank" rel="noopener nofollow" href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API">&lt;canvas&gt;</a><span>MySQL</span>
+                            </div>
+                        <a target="_blank" rel="noopener nofollow" href="https://bodjo.net/"><b>bodjo.net</b></a> <span class="grey">2019</span>
+                        
+                        <p>Made entirely by myself, bodjo.net is an online platform for game bot maker hackathons.</p>
+                        <p>Project development involved frontend (<a target="_blank" rel="noopener nofollow" href="https://github.com/bodjo-net/bodjo-web">main</a> & <a target="_blank" rel="noopener nofollow" href="https://github.com/bodjo-net/bodjo-game/tree/master/web">games</a>), <a target="_blank" rel="noopener nofollow" href="https://github.com/bodjo-net/bodjo-main">backend</a>, games logic, networking and rendering.</p>
+                        <!-- <p>Organized some hackathons<sup><a target="_blank" rel="noopener nofollow" href="https://pages.bodjo.net/news.2.en">[1]</a> <a target="_blank" rel="noopener nofollow" href="https://pages.bodjo.net/news.1.en">[2]</a> <a target="_blank" rel="noopener nofollow" href="https://pages.bodjo.net/news.0.en">[3]</a></sup> in my local town.</p> -->
+                        <a target="_blank" rel="noopener nofollow" href="https://github.com/bodjo-net/">GitHub</a>
                     </li>
                     <li>
                         <div class="tags">
@@ -188,9 +200,8 @@
                         <p>On my traineeship in Onix-Systems (Kirovohrad, Ukraine), I made few applications for Amazon Alexa voice assistant.</p>
                         <p>The problem with these Amazon Alexa devices — is that it's not possible to play music or any other audio recordings without paying more, due to copyright. So, I made possible to play personal audio recordings from Dropdox account, by connecting them with OAuth.</p>
                         <p>This application still works: <a target="_blank" rel="noopener nofollow" href="https://www.amazon.com/dp/B07FL7SDPZ">Amazon Store</a>. <a target="_blank" rel="noopener nofollow" href="https://github.com/dkaraush/Dropbox-Player-for-Alexa">Source code</a>.</p>
-                        <!-- <p><i>(Pleasgie, don't believe these reviews, application didn't worked at that time due to Amazon just blocked it for 2 weeks, because of unreproducible bug they caught. I tried to contact those reviewers, but no success)</i></p> -->
                     </li>
-                    <li class="half-opacity">
+                    <!-- <li class="half-opacity">
                         <div class="tags">
                             <span>Node.JS</span>
                             <span>Web Audio API</span>
@@ -199,7 +210,7 @@
                         <b>WMuz</b><span class="grey">2017</span>
                         <p>Being a fan of Monstercat <i>(music label)</i> streams some time, I wanted to make the same 24/7 stream, but without video. So, it is kind of a radio, but it still receives background images and still shows visualization of audio spectrum.</p>
                         <i>Releasing source code soon...</i>
-                    </li>
+                    </li> -->
                     <li>
                         <div class="tags">
                             <span>Tizen Web</span>
